--- a/index.html
+++ b/index.html
@@ -4,33 +4,93 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="css/style.css" />
     <title>Inicio</title>
   </head>
   <body class="grid-container">
     <header class="header">
-      <div class="nav1">
-        <div class="nav-left">
-          <img class="logo" src="iconos/logo.jpeg" alt="" />
-          <a class="inicio-link" href="index.html">Inicio</a>
-        </div>
-        <div class="nav-right">
-          <img class="iconos" src="iconos/carritoIcon.jpg" alt="" />
-          <img class="iconos" src="iconos/ajusteIcon.png" alt="" />
-          <img class="iconos" src="iconos/userIcon.png" alt="" />
-        </div>
-      </div>
-      <nav>
-        <div class="nav2">
-          <div class="navB1">
-            <a href="paginas/categoria.html">Categoria</a>
-          </div>
-          <div class="navB2">
-            <a href="paginas/productos.html">Productos</a>
-          </div>
-          <div class="navB3"><a href="paginas/ofertas.html">Ofertas</a></div>
-          <div class="navB4">
-            <a href="paginas/contactanos.html">Contactanos</a>
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                  >Inicio</a
+                >
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Categoria
+                </a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a class="dropdown-item" href="./paginas/categoria.html"
+                      >Categoria</a
+                    >
+                  </li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./paginas/productos.html"
+                  >Productos</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./paginas/ofertas.html">Ofertas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./paginas/contactanos.html"
+                  >Contactanos</a
+                >
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-success" type="submit">
+                Search
+              </button>
+            </form>
           </div>
         </div>
       </nav>
@@ -77,7 +137,7 @@
       <div class="footer1">
         <div class="footer-left">
           Ayuda
-          <img class="ayudaIcon" src="iconos/ayudaIcon.png" alt="" />
+          <i class="bx bx-help-circle"></i>
         </div>
         <div class="footer-right">
           <img class="iconosFooter" src="iconos/carritoIcon.jpg" alt="" />
